syntax = "proto3";

package sub;

message SubMessage {
  string msg = 1;
}